--- a/style.css
+++ b/style.css
@@ -472,6 +472,18 @@ nav h3 {
 }
 
 @media (max-width:600px) {
+   * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    width: 100%;
+}
+    
+    
     #main {
         width: 146%;
     }
